2006-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-doc-group): Work for non-ASCII group
	names.

	* gnus-sum.el (gnus-select-newsgroup): Decode group name.

2006-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-draft.el (gnus-draft-edit-message): Make sure to remove Date
	header.

	* message.el (message-draft-headers): Add Date.
	(message-headers-to-generate): Fix typo in docstring.

	* nndraft.el (nndraft-required-headers): New variable.
	(nndraft-generate-headers): Use it.

	* gnus-registry.el (gnus-registry-wash-for-keywords): Bind `word'.

2006-10-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-wash-for-keywords)
	(gnus-registry-find-keywords): new functions to allow easy searching of
	articles that are in the registry

2006-10-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-BBDB, spam-enter-ham-BBDB, spam-parse-list): use
	ietf-drums-parse-address instead of gnus-extract-address-components.
	Reported by Damien Elmes <damien@repose.cx>.

2006-10-13  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Use RFC 2440 definition of
	"blank line" when searching for end of armor headers.

2006-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-write-region): Fix variable name.

2006-10-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el (gmm-write-region): New function based on compatibility
	code from `mm-make-temp-file'.

	* mm-util.el (mm-make-temp-file): Use `gmm-write-region'.

	* nnmaildir.el (nnmaildir--update-nov)
	(nnmaildir-request-replace-article, nnmaildir-request-accept-article):
	Use `gmm-write-region'.

2006-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-charset-synonym-alist, mm-charset-override-alist): Add
	iso-8859-8/windows-1255 and iso-8859-9/windows-1254.

	* nnheader.el (nnheader-find-file-noselect): Inhibit version-control.

	* message.el (message-replacement-char): New variable.